[FIX] Bad contrast in Strasa Cold due to missing bg image (path not updated).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@18440 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa/options/cold.css
+++ b/styles/strasa/options/cold.css
@@ -778,7 +778,7 @@ body.tiki_blogs .author_actions .actions {
 
 .post .author_info {
 	color: #000;
-	background: url(strasa/login.jpg) 0 0 no-repeat;
+	background: url(cold/login.jpg) 0 0 no-repeat;
 }
 
 .post .postbody .attachments {
